<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".settingsContent.TermsnCondition">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <!-- Header with Back Button and Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="#0000"
                    android:contentDescription="@string/goback"
                    app:srcCompat="@drawable/ic_goback_blue" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_bold"
                    android:text="Terms and Conditions"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/dark"
                    android:textSize="26sp"
                    android:layout_marginEnd="36dp"/>
            </LinearLayout>

            <!-- Last Update Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_update" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingStart="3dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="4dp"
                    android:text="@string/last_update_11_january_2025"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Terms and Conditions Content -->
            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/seller_account_and_access"
                android:textColor="@color/dark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_access"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/order_management_and_updates"
                android:textColor="@color/dark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/order_mgmt"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/payments_and_transactions"
                android:textColor="@color/dark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/payments"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/operational_flexibility_and_notifications"
                android:textColor="@color/dark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:paddingTop="10dp"
                android:paddingBottom="100dp"
                android:text="@string/ops_flex"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
